--- a/OnionProject.MVC/Areas/Admin/Views/Author/Create.cshtml
+++ b/OnionProject.MVC/Areas/Admin/Views/Author/Create.cshtml
@@ -27,6 +27,23 @@
                 <input type="file" asp-for="Image" class="form-control" /> 
                 <span asp-validation-for="Image" class="text-danger"></span> 
             </div>
+            <!-- Yeni Alanlar -->
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber" class="control-label"></label>
+                <input asp-for="PhoneNumber" class="form-control" />
+                <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Biography" class="control-label"></label>
+                <textarea asp-for="Biography" class="form-control"></textarea>
+                <span asp-validation-for="Biography" class="text-danger"></span>
+            </div>
+
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
