--- a/OnionProject.MVC/Areas/User/Views/Shared/_UserLayout.cshtml
+++ b/OnionProject.MVC/Areas/User/Views/Shared/_UserLayout.cshtml
@@ -22,14 +22,28 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="User" asp-controller="UserPost" asp-action="Index">Home</a>
                         </li>
-                        <!-- Logout Butonu -->
-                        <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                        </li>
+                    </ul>
+                    
+                    <ul class="navbar-nav ms-auto">
+                        @if (ViewBag.Username != null)
+                        {
                             <li class="nav-item">
-                                <form asp-area="" asp-controller="Home" asp-action="Logout" method="post">
-                                    <button type="submit" class="btn btn-danger">Logout</button>
-                                </form>
+                                <span class="navbar-text fw-bold" style="margin-right: 20px; margin-top: 10px;">
+                                    Hoşgeldin, @ViewBag.Username!
+                                </span>
                             </li>
-                        </ul>
+                        }
+                        <li class="nav-item">
+                            <form asp-area="" asp-controller="Home" asp-action="Logout" method="post">
+                                <button type="submit" class="btn btn-danger">Logout</button>
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -41,11 +55,22 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - OnionProject.MVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="border-top footer text-muted py-4">
+        <div class="container text-center">
+            <p>Bizi sosyal medya hesaplarımızdan takip edin!</p>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" style="width: 30px; margin-right: 15px;">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook" style="width: 30px; margin-right: 15px;">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" style="width: 30px;">
+            </a>
+            <p class="mt-3">Raven's Blog - &copy; 2024 - Tüm Hakları Saklıdır. İlgili Gizlilik Sayfamız İçin: <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
