--- a/OnionProject.MVC/Views/Shared/_Layout.cshtml
+++ b/OnionProject.MVC/Views/Shared/_Layout.cshtml
@@ -1,16 +1,18 @@
-﻿<!DOCTYPE html>
+﻿
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Blog Uygulaması</title>
+    <title>Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Raven's Blog</a>
+                <a class="navbar-brand">Raven's Blog</a>
                 
             </div>
         </nav>
