--- a/OnionProject.MVC/Views/Shared/_Layout.cshtml
+++ b/OnionProject.MVC/Views/Shared/_Layout.cshtml
@@ -12,19 +12,52 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand">Raven's Blog</a>
+                <a href="https://localhost:7225" class="navbar-brand">Raven's Blog</a>
                 
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="User" asp-controller="Home" asp-action="Index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ContactUs">Contact Us</a>
+                    </li>
+                    <div class="d-flex ms-auto">
+                        <a href="https://localhost:7225/Home/Login" class="btn btn-outline-primary me-2">Giriş Yapın</a>
+                        <a href="https://localhost:7225/Home/Register" class="btn btn-outline-success">Hesap Oluşturun</a>
+                    </div>
+                </ul>
             </div>
         </nav>
     </header>
 
+    <br />
+    <br />
+    <br />
     <div class="container">
         @RenderBody()
     </div>
-
-    <footer class="text-center mt-4">
-        <p>&copy; 2024 - Blog Uygulaması</p>
+    <br />
+    <br />
+    <br />
+    <footer class="border-top footer text-muted py-4">
+        <div class="container text-center">
+            <p>Bizi sosyal medya hesaplarımızdan takip edin!</p>
+            <a href="https://www.instagram.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram" style="width: 30px; margin-right: 15px;">
+            </a>
+            <a href="https://www.facebook.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/124/124010.png" alt="Facebook" style="width: 30px; margin-right: 15px;">
+            </a>
+            <a href="https://www.twitter.com" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter" style="width: 30px;">
+            </a>
+            <p class="mt-3">Raven's Blog - &copy; 2024 - Tüm Hakları Saklıdır. İlgili Gizlilik Sayfamız İçin: <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a></p>
+        </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
